--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ flask-marshmallow==0.13.0
 Flask-SQLAlchemy==2.4.4
 marshmallow==3.7.1
 marshmallow-sqlalchemy==0.23.1
+swagger-ui-bundle==0.0.8
+psycopg2
